--- a/Romanian/main/CloudService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/strings.xml
@@ -175,21 +175,21 @@ la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_confusion_toast_deny">Conectați-vă la contul Mi</string>
     <string name="micloud_confusion_yes">Da</string>
     <string name="micloud_detail_battery_low">Acumulator descărcat</string>
-    <string name="micloud_detail_battery_low_message">Acumulatorul este descărcat. Încărcați-l și sincronizați.</string>
+    <string name="micloud_detail_battery_low_message">Acumulatorul este descărcat. Încărcați-l pentru a putea sincroniza.</string>
     <string name="micloud_detail_battery_low_title">Acumulatorul este descărcat</string>
     <string name="micloud_detail_depend_wifi_message">Conectați-vă la Wi-Fi sau verificați setările pentru sincronizare.</string>
-    <string name="micloud_detail_depend_wifi_title">Este necesară conectarea la Wi-Fi</string>
+    <string name="micloud_detail_depend_wifi_title">Conectați-vă la Wi-Fi</string>
     <string name="micloud_detail_do_not_sync">"Nu sincroniza"</string>
     <string name="micloud_detail_download_syncing">Se descarcă %s</string>
     <string name="micloud_detail_fail">"Nu se poate sincroniza"</string>
     <string name="micloud_detail_force_sync">Sincronizați acum</string>
     <string name="micloud_detail_lastest">Sincronizat</string>
     <string name="micloud_detail_lastest_with_off">Sincronizat</string>
-    <string name="micloud_detail_need_charge">Acumulatorul trebuie încărcat pentru a sincroniza</string>
+    <string name="micloud_detail_need_charge">Conectați încărcătorul pentru a relua sincronizarea</string>
     <string name="micloud_detail_not_sync">%d așteaptă sincronizarea</string>
     <string name="micloud_detail_not_synced">Nesincronizat</string>
     <string name="micloud_detail_ok">OK</string>
-    <string name="micloud_detail_pause">Sincronizare oprită</string>
+    <string name="micloud_detail_pause">Sincronizarea s-a oprit</string>
     <string name="micloud_detail_pending">Aşteptare</string>
     <string name="micloud_detail_preference_sync_items">Elemente</string>
     <string name="micloud_detail_query_error">"Nu s-au putut obține informații despre progresul sincronizării"</string>
@@ -200,10 +200,10 @@ la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_detail_syncing">Sincronizare</string>
     <string name="micloud_detail_upload_syncing">Încărcare %s</string>
     <string name="micloud_detail_wlan">%d așteaptă sincronizarea</string>
-    <string name="micloud_dialog_sync_now_message">Vă sugerăm să utilizați Wi-Fi</string>
+    <string name="micloud_dialog_sync_now_message">Conectați-vă la Wi-Fi pentru a evita generarea de costuri suplimentare</string>
     <string name="micloud_dialog_sync_now_negative">Nu acum</string>
-    <string name="micloud_dialog_sync_now_positive">Utilizare flux de date pentru transfer</string>
-    <string name="micloud_dialog_sync_now_title">Se sincronizează datele utilizând fluxul de date</string>
+    <string name="micloud_dialog_sync_now_positive">Utilizare date mobile</string>
+    <string name="micloud_dialog_sync_now_title">Conectați-vă la Wi-Fi pentru a sincroniza datele</string>
     <string name="micloud_dspt">" Utilizaţi Mi Cloud pentru a sincroniza datele, pentru a localiza dispozitivul"</string>
     <string name="micloud_dspt_provision">Utilizaţi Mi Cloud pentru a sincroniza datele, localiza dispozitivul și pentru a partaja lucruri prietenilor.</string>
     <string name="micloud_find_device_finish">Realizat</string>
@@ -269,7 +269,7 @@ Pentru a rezolva acest lucru, fie puteți şterge unele fișierele vechi, fie pu
     <string name="micloud_main_suggest_sync">Nu s-a sincronizat tot conţinutul</string>
     <string name="micloud_main_sync_exception">Eroare de sincronizare</string>
     <string name="micloud_main_sync_init">Obţinere informaţii</string>
-    <string name="micloud_main_sync_need_charge">Se așteaptă încărcarea acumulatorului</string>
+    <string name="micloud_main_sync_need_charge">Încărcați acumulatorul</string>
     <string name="micloud_main_sync_now">Sincronizaţi acum</string>
     <string name="micloud_main_sync_on">Activați sincronizarea</string>
     <string name="micloud_main_sync_on_wifi">Utilizaţi Wi-Fi</string>
