--- a/Romanian/main/PowerKeeper.apk/res/values-ro/strings.xml
+++ b/Romanian/main/PowerKeeper.apk/res/values-ro/strings.xml
@@ -71,17 +71,17 @@ Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="power_checker_background_gps_title">%1$s utilizează frecvent localizarea</string>
     <string name="power_checker_mobile_radio_multi_apps_title">%1$s accesează frecvent rețeaua</string>
     <string name="power_checker_mobile_radio_title">%1$s accesează frecvent rețeaua</string>
-    <string name="power_checker_multi_apps_title">%2$s aplicații consumă energie</string>
-    <string name="power_checker_notify_summary">Eliminați aplicațiile care consumă excesiv energie</string>
-    <string name="power_checker_partial_wakelock_multi_apps_title">%1$s previne intrarea sistemului în standby</string>
-    <string name="power_checker_partial_wakelock_title">%1$s previne intrarea sistemului în standby</string>
+    <string name="power_checker_multi_apps_title">Aplicații care consumă energie excesiv: %2$s</string>
+    <string name="power_checker_notify_summary">Optimizați aplicațiile care consumă excesiv energie</string>
+    <string name="power_checker_partial_wakelock_multi_apps_title">%1$s previne intrarea MIUI în standby</string>
+    <string name="power_checker_partial_wakelock_title">%1$s previne intrarea MIUI în standby</string>
     <string name="power_checker_recent_btn_title">Setări acumulator</string>
     <string name="power_checker_recent_group_title">Recent</string>
     <string name="power_checker_running_btn_title">Oprește procesul</string>
     <string name="power_checker_running_group_title">Rulează</string>
     <string name="power_checker_title">PowerChecker</string>
-    <string name="power_checker_wakeup_alarm_multi_apps_title">%1$s trezește frecvent sistemul</string>
-    <string name="power_checker_wakeup_alarm_title">%1$s trezește frecvent sistemul</string>
+    <string name="power_checker_wakeup_alarm_multi_apps_title">%1$s este lansată frecvent</string>
+    <string name="power_checker_wakeup_alarm_title">%1$s este lansată frecvent</string>
     <string name="power_checker_wifi_scan_multi_apps_title">%1$s scanează frecvent rețelele Wi-Fi</string>
     <string name="power_checker_wifi_scan_title">%1$s scanează frecvent rețelele Wi-Fi</string>
     <string name="power_chooser_user_define_title">Mod nou</string>
