--- a/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
@@ -38,6 +38,9 @@
     <string name="error_sdcard_access">Imposibil de accesat stocarea internă sau externă</string>
     <string name="error_sdcard_unmounted">Introduceţi cardul SD</string>
     <string name="export_to_note">Exportați în Note</string>
+    <string name="head_set_tip_dialog_msg">Deconectați căștile pentru a putea înregistra sunetul cu presetările specifice (de ex. Muzică, Voce).</string>
+    <string name="head_set_tip_dialog_ok">Am înțeles</string>
+    <string name="head_set_tip_dialog_title">Utilizați microfonul intern</string>
     <string name="invalid_argument">Argument invalid</string>
   <string name="keywords_search_call_record">Înregistrare apeluri;Înregistrare apel;Call recording;Call recordings</string>
   <string name="keywords_search_record">Înregistrare nouă;Adăugați o înregistrare;Înregistrare;Înregistrări;Transcript;Transcribe;Recorder;Speech recorder;Sound recorder;Recorder app;Recording app;How do I record;How to record sound;Where is recorder;MIUI Reorder</string>
