--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -47,8 +47,8 @@
     <string name="birthday_event_description_today">Astăzi este</string>
     <string name="birthday_event_description_tomorrow">Mâine este</string>
     <string name="birthday_event_description_yesterday">Ieri a fost</string>
-    <string name="birthday_metric" />
-    <string name="birthday_notification_age_term" />
+    <string name="birthday_metric">-ani</string>
+    <string name="birthday_notification_age_term">%1$s%2$s</string>
     <string name="birthday_notification_text_days_later">%1$s zile până la %4$s (%5$s)</string>
     <string name="birthday_notification_text_today">"Nu uitaţi să-i urați "La Mulţi Ani!""</string>
     <string name="birthday_notification_title_days_later">"Se apropie %2$s a lui %1$s."</string>
@@ -63,7 +63,7 @@
     <string name="button_week">S</string>
   <string name="calendar_network_error">Eroare de rețea</string>
     <string name="calendar_refresh">Actualizaţi</string>
-    <string name="can_not_create_long_event">Conținutul evenimentului este prea lung</string>
+    <string name="can_not_create_long_event">Numele evenimentului este prea lung</string>
     <string name="can_not_modify_allday_event">"Nu se poate modifica evenimentul de o zi"</string>
     <string name="can_not_modify_event">"Nu se poate schimba evenimentul"</string>
     <string name="can_not_modify_repeating_acrossing_days_event">"Nu se poate modifica evenimentul de mai multe zile"</string>
