--- a/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
@@ -256,7 +256,7 @@
     <string name="uninstall_xspace_dialog_message">Dezinstalarea aplicației clonate va șterge și toate datele acesteia.</string>
     <string name="uninstall_xspace_dialog_title_format">Dezinstalați aplicația clonată \"%s\"</string>
     <string name="unknown_artist_name">Artist necunoscut</string>
-    <string name="unnamed_folder_name">Dosar fără nume</string>
+    <string name="unnamed_folder_name">Dosar</string>
     <string name="wallpaper">Imagine de fundal</string>
     <string name="wallpaper_auto_change_title">Blocare ecran</string>
     <string name="wallpaper_failed_message">"Nu s-a putut aplica imaginea de fundal"</string>
