--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
@@ -7,6 +7,11 @@ Mesajele vor apărea doar în spațiul secundar."</string>
     <string name="PrivacyContactDes2">"Dacă ați utilizat mesajele private în spațiul principal,
 această opțiune va fi activată în mod automat în spațiul secundar."</string>
     <string name="add_finger_print">Adăugați o amprentă</string>
+    <string name="air_space_created">Spațiul pentru Servici a fost creat cu succes</string>
+    <string name="air_space_deleted">Spațiul pentru Servici a fost șters cu succes</string>
+    <string name="air_space_exit">Părăsire spațiu</string>
+    <string name="air_space_setting">Setări Spațiu</string>
+    <string name="airspace_users_full">"Nu se poate crea încă un Spațiu pentru Servici"</string>
     <string name="appData">Aplicații instalate</string>
     <string name="app_name">Componentă de bază de securitate</string>
     <string name="back">Înapoi</string>
@@ -32,18 +37,21 @@ această opțiune va fi activată în mod automat în spațiul secundar."</strin
     <string name="confirmCloseSpaceDes">"Nu veți mai putea accesa Spațiul Secundar după ce îl veți elimina. Toate datele vor fi mutate sau vor fi șterse."</string>
     <string name="confirmDelete">Eliminați</string>
     <string name="confirmSecondSpacePassword">Confirmați parola pentru Spațiul Secundar</string>
+    <string name="confirm_airspace_password">Confirmați parola pentru Spațiul pentru Servici</string>
     <string name="confirm_main_space_password">Confirmați parola pentru Spațiul Principal</string>
     <string name="confirm_restore">"Nu arăta"</string>
     <string name="contactData">Contacte</string>
     <string name="contact_sub_titile_text">Mesajele vor fi partajate între cele 2 spații de lucru</string>
     <string name="contact_titile_text">"Afișează mesajele private în Spațiul Secundar
 pentru a le putea vedea în orice moment"</string>
+    <string name="contact_us">Contactați-ne</string>
     <string name="continueButton">Continuați</string>
     <string name="createANewSpace">Creați în telefon un spațiu de lucru separat.</string>
     <string name="createUserFail">"Nu s-a putut crea"</string>
     <string name="create_app_icon_failed">"Nu s-a putut crea pictograma"</string>
     <string name="create_app_icon_success">Pictograma a fost creată cu succes</string>
     <string name="create_space_loading">Se crează Spațiul Secundar…</string>
+    <string name="create_work_space">Creați Spațiul pentru Servici</string>
     <string name="creating_app_icon">Se crează pictograma…</string>
     <string name="dataSafe">Utilizarea Spațiului Secundar este ca și cum ați avea două telefoane.</string>
     <string name="declare_dialog_title">Despre aplicațiile clonate</string>
@@ -58,7 +66,9 @@ pentru a le putea vedea în orice moment"</string>
     <string name="dir_switch_out_all_photos">Galeria din Spațiul Secundar</string>
     <string name="disable">Dezactivați</string>
     <string name="dont_import">Nu acum</string>
+    <string name="downloading_space">Se descarcă…</string>
     <string name="enable">Activați</string>
+    <string name="enter_air_space">Mergeți la Spațiul pentru Servici</string>
     <string name="err_copy_contacts">"Nu s-au putut copia contactele"</string>
     <string name="err_copy_files">"Nu s-au putut copia fișierele"</string>
     <string name="err_copy_photos">"Nu s-au putut copia fotografiile"</string>
@@ -98,7 +108,11 @@ Le puteți de asemenea descărca separat."</string>
     <string name="import_photo">Importați fotografii</string>
     <string name="import_photo_desc">Vizualizați elementele partajate în Spațiul Secundar</string>
     <string name="import_photo_suc">Fotografii importate</string>
+    <string name="invalid_qr_code">Cod QR invalid</string>
+    <string name="keywords_sspace">Spațiu secundar;2 spații de lucru;două spații de lucru;Ascundere aplicații;Ascundere fișiere;Ascundere fotografii;Blocar ecran;Parola pentru Blocarea ecranului;Confidențialitate;Mod Confidențialitate;Mod privat;Privat;Mod gazdă;Sesiune gazdă;Acces gazdă;Cont gazdă;Gazdă</string>
+    <string name="keywords_xspace">Aplicație clonată;Aplicații clonate;Aplicație dublă;Aplicații duble;Clonare aplicație;Clonare aplicații;Clonă aplicație;Clone aplicații;Două conturi;2 conturi</string>
     <string name="list_empty_text">Gol</string>
+    <string name="loading">Doar o secundă…</string>
     <string name="loading_apps">Se încarcă aplicațiile…</string>
     <string name="loading_space">Doar o secundă…</string>
     <string name="loading_success">Încărcate cu succes</string>
@@ -108,12 +122,15 @@ Le puteți de asemenea descărca separat."</string>
     <string name="msg_switch_photo">Ștergeți aceste fotografii din Spațiul Principal după ce vor fi mutate?</string>
     <string name="needSetKeyguardFirst">Setați parola pentru Spațiul Principal</string>
     <string name="needSetKeyguardFirstDes">Setați parola pentru Spațiul Principal înainte de a o seta pe cea pentru Spațiul Secundar</string>
+    <string name="need_network_when_create">Conectați-vă la rețea înainte de a crea Spațiul pentru Servici</string>
+    <string name="need_reset_passwd">Resetați parola pentru Spațiul pentru Servici înainte de a-l accesa</string>
     <string name="need_set_second_space_desc">Adăugați o parolă pentru spațiul de lucru secundar înainte de a adăuga amprenta pentru accesarea acestuia</string>
     <string name="need_set_second_space_pwd_first">Setați mai întâi parola pentru Spațiul secundar</string>
     <string name="newSecondSpace">Activați Spațiul Secundar</string>
     <string name="next_setp">Mai departe</string>
     <string name="no_match_repate_scanner">"Amprentele nu corespund; scanați din nou"</string>
     <string name="normal_app">Spațiul Principal</string>
+    <string name="not_support_air_space">"Această caracteristică nu este suportată de telefonul dvs."</string>
     <string name="not_support_multiple_users">"Nu sunt suportate spații de lucru multiple"</string>
     <string name="notificationSetPassword">Setați parola</string>
     <string name="notificationSetPasswordDes">Protejați-vă datele din Spațiul Secundar</string>
@@ -126,9 +143,12 @@ Le puteți de asemenea descărca separat."</string>
     <string name="openPasswordGuard">Setați parola pentru Spațiul Secundar</string>
     <string name="openSuccess">Activat</string>
     <string name="opened">Pornit</string>
+    <string name="other">Altele</string>
     <string name="otherSettings">Alte setări</string>
     <string name="passWordGuardSummary">Accesați Spațiul Secundar din blocarea ecranului utilizând o parolă</string>
     <string name="passwordProtect">Parola</string>
+    <string name="path_sspace">Setări/Spațiul Secundar</string>
+    <string name="path_xspace">Setări/Aplicații clonate</string>
     <string name="please_diff_finger_print">"Asigurați-vă că utilizați amprente diferite pentru cele 2 spații de lucru.
 Altfel nu veți putea accesa Spațiul secundar din Blocarea ecranului."</string>
     <string name="privacyContactsSummary">Arată elementele private în Spațiul Secundar</string>
@@ -141,11 +161,18 @@ Altfel nu veți putea accesa Spațiul secundar din Blocarea ecranului."</string>
     <string name="remove_second_space_msg">Toate datele aplicațiilor din Spațiul Secundar vor fi șterse după ce veți elimina Spațiul Secundar. Continuați?</string>
     <string name="removingSpace">Ștergere…</string>
     <string name="repeat_scanner_fingerprint">Adăugați din nou</string>
+    <string name="reset_passwd_success">Parola a fost resetată cu succes</string>
+    <string name="resource_sspace">Spațiul Secundar</string>
+    <string name="resource_xspace">Aplicații clonate</string>
     <string name="restore_normal_show">"Nu arăta mesajele private"</string>
     <string name="restore_show_desc">"Nu arăta mesajele private în Spațiul Secundar. Ele vor fi în continuare disponibile în Spațiul Principal."</string>
     <string name="restore_show_toast">Nu se afișează mesajele private</string>
     <string name="retain_src_file">Păstrează fișierele</string>
     <string name="retain_src_photo">Păstrează fotografiile</string>
+    <string name="same_qr_code_create_space">Creați un altul</string>
+    <string name="same_qr_code_des">Se pare că acest Spațiu pentru Servici există deja. Puteți utiliza scurtăturile pentru Ecranul principal și perdeaua de notificări pentru a ajunge acolo. Accesați acum?</string>
+    <string name="same_qr_code_enter_space">Accesați Spațiul pentru Servici</string>
+    <string name="same_qr_code_title">%s există deja</string>
     <string name="scanner_fingerprint">Se scanează amprenta…</string>
     <string name="scanner_fingerprint_enter_second">"Scanați amprenta pentru Spațiul secundar
 pentru a accesa Spațiul secundar din Blocarea ecranului"</string>
@@ -186,6 +213,8 @@ pentru a accesa Spațiul secundar din Blocarea ecranului"</string>
     <string name="show_private_msg">Afișează mesajele private</string>
     <string name="show_private_msg_summary">Afișează mesajele private în Spațiul Secundar</string>
     <string name="spaceSetting">Setări</string>
+    <string name="space_des_default">Spațiu izolat cu date criptate</string>
+    <string name="space_name_default">Spațiul pentru Servici</string>
     <string name="startSet">Setați</string>
     <string name="startTransfer">Mutați</string>
     <string name="start_input_finger_print">Adăugați amprenta</string>
@@ -199,6 +228,7 @@ pentru a accesa Spațiul secundar din Blocarea ecranului"</string>
     <string name="switch_apps_settings">Setări pentru aplicații</string>
     <string name="switch_data_app">Mutați elementele în Spațiul Secundar</string>
     <string name="switch_data_settings">Mutați datele</string>
+    <string name="switch_download_space">Comutați Spațiul pentru Servici</string>
     <string name="switch_failed">"Nu s-au putut muta"</string>
     <string name="switch_file_success">Fișierele au fost mutate cu succes</string>
     <string name="switch_in_contacts">Importați contacte</string>
@@ -233,9 +263,12 @@ pentru a accesa Spațiul secundar din Blocarea ecranului"</string>
     <string name="transferMessage">Mesajele din Spațiul Secundar vor fi mutate în Spațiul Principal</string>
     <string name="tryNow">Încercați acum</string>
     <string name="wating">Doar o secundă…</string>
+    <string name="xpsace_guide_button">Creați</string>
     <string name="xspace_chocie">Suport pentru aplicațiile clonate</string>
     <string name="xspace_creating">Se crează aplicația clonată…</string>
     <string name="xspace_description">Clonați aplicații pentru a le putea utiliza separat. Acestea vor avea pictograme specifice pe ecranul principal.</string>
+    <string name="xspace_guide_des">Utilizați 2 conturi fără a comuta</string>
+    <string name="xspace_guide_title">Creați o clonă pentru %s</string>
     <string name="xspace_header">Aplicații clonate</string>
     <string name="xspace_install_completed">Pictograma adăugată în Ecranul principal</string>
     <string name="xspace_install_failed">"Nu s-a putut crea"</string>
