--- a/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="activity_package_delete_confirm_title">Avertizare importantă</string>
+    <string name="activity_package_delete_confirm_title">Atenție</string>
     <string name="add_frequent_phrases">Adăugare expresii frecvente</string>
     <string name="all_call_livetalk_enable">Utilizați pachete de suplinire pentru apeluri naționale și internaționale</string>
     <string name="all_call_livetalk_remain_mins">Minute rămase: (%1$s naţionale) | (%2$s %3$s)</string>
@@ -142,7 +142,7 @@
     <string name="status_bar_toggle_wifi_ap">Hotspot</string>
     <string name="translation_more">Mai multe</string>
     <string name="translation_query_error">"Nu s-a găsit niciun rezultat"</string>
-    <string name="translation_query_error_network">"Nu s-a putut conecta la rețea. Verificați setările ți încercați din nou"</string>
+    <string name="translation_query_error_network">"Nu s-au putut obține informațiile. Verificați conexiunea la rețea și încercați din nou"</string>
     <string name="turn_off">Opriți</string>
     <string name="unknown_caller">Număr necunoscut</string>
     <string name="user_switching_dialog_text">Comutare…</string>
